Changelog for version Xdx (2.5)
  * Complete function key command entry support.
  * Add close dialog when Ctl-Q is used to exit.

Changelog for version Xdx (2.4.3)
  * Apply Debian patch from bug #577377.
  * Bring build system up to date for later versions of Autotools.
  * Do not track any build system generated files in Git VCS.
  * Modify source as needed for clean build with Gtk+ 2.24.
  * New upstream maintainer, Nate Bargmann, N0NB <n0nb@n0nb.us>
  * Development hosted at https://github.com/N0NB/xdx
  * Portuguese translation update from David, CT1DRB
  * Add support to load updated country file using command line option,
    environment variable, or placing cty.dat in the preferences directory.
  * Fix URI handling for GTK+ 2.24 and later.

Changelog for version xdx (2.4.2)
  * German translations added.
  * Improved gnuplot script for proper use of time format for the x-axis.
  * Both contributions by Tom DL1JBE, Thanks!

Changelog for version xdx (2.4.1)
  * This fixes compilation against version 2.14 of GTK+. Thanks to Tom,
    DL1JBE for notifying me.

Changelog for version xdx (2.4)
  * Added automatic country lookup by Emanuele IZ0ETE. In order for this to
    work you need to enable the country column in the preferences dialog.
  * With this release visible columns need to be reconfigured.
  * Portuguese translation added. Thanks to David, CT1DRB.

Changelog for version xdx (2.3)
  * Compilation fixes for MAC OS X. Thanks to IZ0ETE.

Changelog for version xdx (2.2)
  * This fixes compilation issues due to a missing time.h include statement.

Changelog for version xdx (2.1)
  * French, Spanish and Polish translation updates.
  * Allow zero length strings in the commands autologin entry. This will send
    a plain return.
  * Make sure we can fill in the callsign in the settings dialog.
  * Use glib functions for calling external programs.
  * CLX compatibility for auto-reconnect has been added.
  
Changelog for version xdx (2.0)