@@ -1,55 +1,149 @@
 .\"
-.TH "XDX" "1" "@PACKAGE_STRING@" "Joop Stakenborg" "Hamradio"
-.SH "NAME"
+.TH XDX 1 "@PACKAGE_STRING@" "Joop Stakenborg" "Ham radio"
+.
+.SH NAME
 @PACKAGE_NAME@ \- TCP/IP DX-cluster client for Amateur Radio
-
+.
 .SH SYNOPSIS
 .B @PACKAGE@
-[\fIOPTION\fR]...
-
-.SH "DESCRIPTION"
-\fB@PACKAGE_NAME@\fR is a GUI DX-cluster client which shows a list with
-DX announcements and a separate text widget with WWV, WCY, "To ALL" and other
-server messages in a single Gtk+ window.  DX Cluster hosts are remembered
-between sessions.
-
+.RB [\| \-c
+.IR cty.dat \|]
+.RB [\| \-h \|]
+.RB [\| \-V \|]
+.
+.\" --------------------------------------------------------------------
+.SH DESCRIPTION
+.\" --------------------------------------------------------------------
+.
+@PACKAGE_NAME@ is a DX-cluster client for the X Window System which
+shows a list of DX announcements and a separate list of WWV, WCY,
+\*(lqTo ALL\*(rq and other server messages in a single X11 window.
+.
+@PACKAGE_NAME@ uses the telnet protocol to connect to a DX-Cluster host
+via TCP/IP.
+.
+While host connections are most commonly made via the Internet, any medium
+capable of carrying TCP/IP, such as packet radio, may be used.
+.
+Host connection details are saved between sessions.
+.
+.
+.\" --------------------------------------------------------------------
 .SH OPTIONS
-Here is a summary of the supported options:
+.\" --------------------------------------------------------------------
+.
+The following options are recognized by @PACKAGE_NAME@.
 .TP
-.B \-c, \-\-cty_dat=path/to/cty.dat
-Set path for desired country file.
+.BI \-c\  cty.dat \fR,\ \fB\-\-cty_dat= cty.dat
+Load a desired country data file.
+.
+.IP
+Country data files are used to determine the DX Century Club (DXCC)
+entity shown in the Country column.
+.
+Updated country files are available from
+.UR http://\:www.country\-files.com/\:cty/\:cty.dat
+country\-files.com
+.UE
+.
+Although a country file is installed as a part of @PACKAGE_NAME@,
+it will quickly become out of date as updates are made available
+frequently.
+.
+Announcments of udpated country files are sent to the @PACKAGE_NAME@
+mailing list.
+.
+See the
+.B BUGS
+section below for the mailing list address.
+.
+.IP
+See the
+.B ENVIRONMENT
+and
+.B FILES
+sections below for other methods of loading an updated country file.
+.
 .TP
-.B \-h, \-\-help
-Print short \fB@PACKAGE@\fP usage message detailing available options and exit.
+.BR \-h ", " \-\-help
+Print short @PACKAGE_NAME@ usage message detailing available options
+and exit.
+.
 .TP
-.B \-V, \-\-version
-Print @PACKAGE_NAME@ version and short copyright information and exit.
-
-.SH "ENVIRONMENT"
-Instead of the \fB\-c\fP or \fB\-\-cty_dat\fP command line
-options, @PACKAGE_NAME@ will honor the \fBXDX_CTY\fP environment variable.
-However, when the command line option is given the environment varriable will
-be ignored.
-
-.SH "FILES"
-@PACKAGE_NAME@ will look for the country file in the preferences directory,
-normally \fI$HOME/.@PACKAGE@\fP, if a path is not given on the command line or
-the \fBXDX_CTY\fP environment variable is not set.  This is a convenient way
-to keep an up-to-date or custom \fIcty.dat\fP for use just with
-@PACKAGE_NAME@.
-
-.SH "NOTES"
-Updated country files are available from:
-\fIhttp://www.country-files.com/cty/cty.dat\fP
+.BR \-V ", " \-\-version
+Print @PACKAGE_NAME@ version and short copyright information then exit.
+.
+.
+.\" --------------------------------------------------------------------
+.SH ENVIRONMENT
+.\" --------------------------------------------------------------------
+.
+.TP
+.B XDX_CTY
+If
+.RB $ XDX_CTY
+is set, its value is the location of the
+.I cty.dat
+file.
+.
+Using the
+.B \-c
+option overrides this environment variable.
+.
+.
+.\" --------------------------------------------------------------------
+.SH FILES
+.\" --------------------------------------------------------------------
+.
+.TP
+$\fBHOME\fI/.@PACKAGE@/cty.dat
+.
+@PACKAGE_NAME@ will load the country file found in the preferences
+directory, normally $\fBHOME\fI/.@PACKAGE@\fR, if the
+.B \-c
+option is not given or the
+.B XDX_CTY
+environment variable is not set.
+.
+This is a convenient way to keep an up-to-date or custom
+.I cty.dat
+for use just with @PACKAGE_NAME@.
+.
+.
+.
+.\" --------------------------------------------------------------------
+.SH NOTES
+.\" --------------------------------------------------------------------
+.
+@PACKAGE_NAME@ has a new maintainer, Nate Bargmann, N0NB.
+.
 .PP
-Development is currently hosted at: \fI@PACKAGE_URL@\fP
-
-@PACKAGE_NAME@ has been translated into several languages.  More translations
-are welcome.  Please contact the maintainer for details.
-
-.SH "BUGS"
-@PACKAGE_NAME@ has a new maintainer, Nate Bargmann, N0NB.  Please report bugs
-to \fI<@PACKAGE_BUGREPORT@>\fP.
-
-.SH "SEE ALSO"
-Select Help->Manual after starting @PACKAGE_NAME@ for a full manual.
+Development is currently hosted at
+.UR @PACKAGE_URL@
+GitHUb
+.UE
+.
+.PP
+@PACKAGE_NAME@ has been translated into several languages.
+.
+More translations are welcome.
+.
+Please contact the maintainer to contribute.
+.
+.
+.\" --------------------------------------------------------------------
+.SH BUGS
+.\" --------------------------------------------------------------------
+.
+Please report bugs to
+.UR @PACKAGE_BUGREPORT@
+xdxcluster\-client\-discuss
+.UE
+.
+.
+.\" --------------------------------------------------------------------
+.SH SEE ALSO
+.\" --------------------------------------------------------------------
+.
+From the menu, select Help\->Manual after starting @PACKAGE_NAME@ for
+a full manual.
